@@ -20,7 +20,7 @@ Test::ReportPrereqs.include[5] = File::ShareDir::Install
 [Prereqs / RuntimeRequires]
 JSON::Schema::Modern = 0.549
 JSON::Schema::Modern::Document::OpenAPI = 0.024
-OpenAPI::Modern = 0.068
+OpenAPI::Modern = 0.074
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
