@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-OpenAPI-Modern
 
 {{$NEXT}}
+          - adjust tests for changes in OpenAPI::Modern 0.074
 
 0.012     2024-09-15 15:30:24Z
           - adjust tests for changes in OpenAPI::Modern 0.068
